# Chatot

./: .gitignore  CMakeLists.txt  README.md
include/: chatot_lib.h
src/: chatot_lib.cc
test/: main.cc
